kubernetes/istio/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
    #ingress.kubernetes.io/ssl-passthrough: "true"
    #ingress.kubernetes.io/secure-backends: "true"
spec:
  #tls:
  #  - secretName: istio-ingress-certs # currently ignored
  rules:
  - http:
      paths:
      - path: /api/team/.*
        backend:
          serviceName: fancave-teams
          servicePort: 3080
      - path: /api/news/.*
        backend:
          serviceName: fancave-news
          servicePort: 3080
      - path: /api/player/.*
        backend:
          serviceName: fancave-players
          servicePort: 3080
      - path: /index.html
        backend:
          serviceName: fancave-client
          servicePort: 3080
      - path: /build/.*
        backend:
            serviceName: fancave-client
            servicePort: 3080
      - path: /assets/.*
        backend:
            serviceName: fancave-client
            servicePort: 3080
      #- path: /.*
      #  backend:
      #    serviceName: fancave-client
      #    servicePort: 3080
